# ObsidianClone

./: .dockerignore  .gitignore  LICENSE  manage.py  pyproject.toml
API/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
API/migrations/: 0001_initial.py
NoteTakngApp/: asgi.py  settings.py  urls.py  wsgi.py
media/files/: khiyar.md
static/: check.css  confirm_delete.css  file_detail.css  file_list.css  show.css  upload.css
templates/: check.html  confirm_delete.html  file_detail.html  file_list.html  show.html  upload.html
