[project]
name = "notetakngapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Sadra Hosseini",email = "sadrahosseini98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.2)"
]

[project.optional-dependencies]

lint = [
    "pylint (>=3.3.4,<4.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

typecheck = [
    "mypy (>=1.15.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
